@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <addon id="plugin.video.infowars"
        name="Infowars"
-       version="2.1.1"
+       version="2.1.2"
        provider-name="Thomas Meadows, Spinalcracker">
   <requires>
 		<import addon="xbmc.python" version="2.24.0"/>
@@ -15,12 +15,9 @@
     <summary lang="en_GB">Videos from Infowars.com Including live daily shows</summary>
     <description lang="en_GB">Videos from Infowars.com Including live daily shows</description>
 	<news>
-Version 2.1.1
-- Updated All Links (Spinalcracker)
-- Removed broken documentary section
-- Added On Demand Videos Section
-- Added Lastest Full On Demand Episodes Section
-- Updated Icons
+Version 2.1.2
+- Updated On Demand links
+- Updated Recent Full Show links
 
 	</news>
 	<disclaimer lang="en_GB">This Project was made without association of the creators of infowars.com</disclaimer>
